inbetween stops now rendering. State of inbetween is one step behind. working on debugging that now.

--- a/src/components/Dashboard/FlightLogDashboard.css
+++ b/src/components/Dashboard/FlightLogDashboard.css
@@ -262,3 +262,7 @@ p {
     flex-direction: column;
 
 }
+
+.in-between-airport { 
+    color: white;
+}
